# nanohaskell

./: README.md  nanohaskell.cabal
app/: Main.hs
src/Parser/: CoreParser.lhs  LayoutCombinators.lhs  NanoHaskellParser.lhs  TypeParser.lhs
src/Syntax/: Name.lhs  NanoHaskell.lhs  Type.lhs
src/Utils/: Name.lhs  Pretty.lhs
test/: Spec.hs
