name:                nanohaskell
version:             0.1.0.0
synopsis:            CoreHaskell with Multi-parameter and optional type classes.
description:         Please see README.md
homepage:            http://github.com/rodrigogribeiro/nanohaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Rodrigo Ribeiro
maintainer:          rodrigogribeiro@gmail.com
copyright:           2010 Author Here
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:       
                         Parser.NanoHaskellParser
                       , Syntax.NanoHaskell
                       , Syntax.Type  
                       , Syntax.Name
                       , Utils.Pretty
  build-depends:         base >= 4.7 && < 5
                       , pretty
                       , parsec
                       , indents
                       , mtl
                       , syb
  default-language:    Haskell2010

executable nanohaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nanohaskell
  default-language:    Haskell2010

test-suite nanohaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base                    
                     , nanohaskell
                     , parsec
                     , indents
                     , mtl
                     , HUnit
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/nanohaskell
